# comfyui-identity-forge

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  user_options.example.json
.github/workflows/: ci.yml
data/: constraints.py  cosplayers.py  creatures.py  fields.py  templates.py  user_options.py
docs/: architecture.md  cosplayer-notes.md  creature-notes.md  suggested-additions.md  usage.md
docs/reference/: archetypes.md  cosplayers.md  creatures.md
js/: identity_forge.js  identity_forge_creature.js
nodes/: identity_forge.py  identity_forge_archetype.py  identity_forge_cosplayer.py  identity_forge_creature.py  identity_forge_vault_load.py  identity_forge_vault_save.py
scripts/: generate_js_data.py  generate_reference_docs.py
tests/: preview_cosplayer.py  test_creature.py  test_engine.py  test_js_sync.py  test_vault.py  validate_data.py
